unidad4/ejemplos/ejemplo3/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
 name: mariadb
subsets:
 - addresses:
     - ip: 137.74.161.90
   ports:
     - port: 3360
