unidad4/ejemplos/ejemplo3/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mariadb
spec:
 type: ClusterIP
 ports:
 - port: 3306
   targetPort: 3306
