unidad4/ejemplos/ejemplo3/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
